--- a/javascriptbasicsTOP.html
+++ b/javascriptbasicsTOP.html
@@ -5,9 +5,11 @@
 </head>
 <body>
   <script>
-      
+      let max =57;
+      let actual = max -17;
+      let percentage = actual / max ;
  	// Your JavaScript goes here!
-    console.log("Hello, World!")
+   console.log(practice);
   </script>
 </body>
 </html>
